--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ section {
 
 .container {
   padding: 50px 0;
+  width: 100%;
 }
 
 .row {
@@ -281,4 +282,40 @@ PROJECTS
 
 .project__description--para {
   margin: 16px 0;
+}
+
+/*
+
+FOOTER
+
+*/
+
+footer {
+  background-color: #242424;
+  display: flex;
+  padding: 6% 0;
+}
+
+.footer__row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__logo--img {
+  width: 70px;
+  height: 70px;
+}
+
+.footer__social--list {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  max-width: 500px;
+  margin: 20px 0;
+}
+
+.footer__social--link,
+.footer__copyright {
+  color: white;
 }
