--- a/style.css
+++ b/style.css
@@ -402,6 +402,11 @@ MODAL
   font-weight: 700;
   text-align: center;
   padding: 28px;
+  z-index: -1;
+}
+
+.modal__overlay--visible {
+  z-index: 1;
 }
 
 .fa-spinner {
