--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
+body {
+
+}
+
 .orange {
   color: #f06449;
 }
@@ -60,6 +64,9 @@ input:hover, textarea:hover {
 input:focus, textarea:focus {
   border-color: #f06449;
 }
+
+
+
 
 label {
   font-size: 14px;
@@ -130,6 +137,22 @@ button {
 .link__hover-effect:hover:after {
   left: 0;
   width: 100%;
+}
+
+nav,
+.scroll,
+header {
+    opacity: 1;
+    visibility: visible;
+    transition: all 800ms 300ms;
+}
+
+.modal--open nav,
+.modal--open .scroll,
+.modal--open header {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 400ms ;
 }
 /*
 
@@ -276,10 +299,24 @@ MODAL
   width: 90%;
   max-width: 1100px;
   height: 700px;
-  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
   border-radius: 20px;
   overflow: hidden;
   display: flex;
+  visibility: hidden;
+  z-index: -1;
+  transition: visibility 1s, z-index 1s, box-shadow 1s ease;
+}
+
+
+.modal--open .modal{
+  z-index: 60;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
+  visibility: visible;
+}
+
+.modal--open .modal__about,
+.modal--open .modal__contact {
+  transform: translateX(0%);
 }
 
 .modal__half {
@@ -289,11 +326,12 @@ MODAL
   flex-direction: column;
   justify-content: center;
   position: relative;
+  transition: all 300ms ease-in;
 }
 
 .modal__about {
   background-color: rgb(245, 245, 245);
-  
+  transform: translateX(-120%);
 }
 
 .modal__languages {
@@ -304,15 +342,17 @@ MODAL
 .modal__contact {
   background-color: #242424;
   color: white;
+  transform: translateX(120%);
 }
 
 .modal__language {
-  width: 25%;
+  /* width: 25%; */
   padding: 16px;
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   transition: all 300ms ease;
 }
 
@@ -334,6 +374,7 @@ MODAL
 }
 
 .modal__language--img {
+  max-width: 60px;
   width: 100%;
 }
 
@@ -384,7 +425,7 @@ MODAL
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   
@@ -407,6 +448,7 @@ MODAL
 
 .modal__overlay--visible {
   z-index: 1;
+  display: flex;
 }
 
 .fa-spinner {
