--- a/style.css
+++ b/style.css
@@ -7,9 +7,7 @@
   font-family: 'Roboto', sans-serif;
 }
 
-body {
-
-}
+body {}
 
 .orange {
   color: #f06449;
@@ -36,6 +34,7 @@ p {
 
 section {
   background-color: #f5f5f5;
+  transition: all 300ms ease;
 }
 
 input, textarea {
@@ -142,17 +141,49 @@ button {
 nav,
 .scroll,
 header {
-    opacity: 1;
-    visibility: visible;
-    transition: all 800ms 300ms;
+  opacity: 1;
+  visibility: visible;
+  transition: all 800ms 300ms;
 }
 
 .modal--open nav,
 .modal--open .scroll,
 .modal--open header {
-    opacity: 0;
-    visibility: hidden;
-    transition: all 400ms ;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 400ms;
+}
+
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-adjust,
+.dark-theme .header__para {
+  color: white;
+}
+
+.dark-theme #personal-logo {
+  filter: none;
+}
+
+.dark-theme .scroll__icon {
+  border-color: white;
+}
+
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect--black:after,
+.dark-theme .mail__btn {
+  background-color: white;
+}
+
+.dark-theme section {
+  background-color: #242424;
+}
+
+
+.dark-theme .mail__btn {
+  color: #242424;
 }
 /*
 
@@ -308,7 +339,7 @@ MODAL
 }
 
 
-.modal--open .modal{
+.modal--open .modal {
   z-index: 60;
   box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.45);
   visibility: visible;
@@ -428,7 +459,7 @@ MODAL
   display: none;
   align-items: center;
   justify-content: center;
-  
+
 }
 
 .modal__overlay--loading {
@@ -437,7 +468,7 @@ MODAL
   font-size: 80px;
 }
 
-.modal__overlay--success{
+.modal__overlay--success {
   background-color: #4bb543;
   font-size: 40px;
   font-weight: 700;
