--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {}
 
 .orange {
@@ -186,6 +190,7 @@ header {
 .dark-theme .mail__btn {
   color: #242424;
 }
+
 /*
 
 LANDING PAGE
@@ -242,6 +247,9 @@ LANDING PAGE
   position: absolute;
   bottom: 32px;
   right: 40px;
+  z-index: 100;
+  position: fixed;
+  box-shadow: 0 12px 30px 0 rgb(0, 0, 0, 0.2);
 }
 
 .scroll {
@@ -290,6 +298,7 @@ NAVIGATION
 
 nav {
   display: flex;
+  padding: 0 20px;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -369,6 +378,8 @@ MODAL
 .modal__languages {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .modal__contact {
@@ -565,7 +576,7 @@ PROJECTS
   position: absolute;
   top: 50%;
   left: 90px;
-  transform: translateY(100%);
+  transform: translateY(-50%);
   opacity: 0;
   transition: opacity 300ms, transform 450ms ease;
   color: white;
@@ -597,6 +608,7 @@ FOOTER
 */
 
 footer {
+  position: relative;
   background-color: #242424;
   display: flex;
   padding: 6% 0;
@@ -643,35 +655,107 @@ vw 5, 50, 80
   top: 15vh;
   left: 5vw;
 }
+
 .shape--1 {
   top: 15vh;
   left: 50vw;
 }
+
 .shape--2 {
   top: 15vh;
   left: 80vw;
 }
+
 .shape--3 {
   top: 50vh;
   left: 5vw;
 }
+
 .shape--4 {
   top: 50vh;
   left: 50vw;
 }
+
 .shape--5 {
   top: 50vh;
   left: 80vw;
 }
+
 .shape--6 {
   top: 80vh;
   left: 5vw;
 }
+
 .shape--7 {
   top: 80vh;
   left: 50vw;
 }
+
 .shape--8 {
   top: 80vh;
   left: 80vw;
+}
+
+
+/* 
+
+RESPONSIVENESS
+
+*/
+
+/* tablets, large smart phones */
+@media (max-width: 768px) {
+  .title {
+    font-size: 80px;
+  }
+
+  .header__para {
+    font-size: 20px;
+  }
+
+  .modal {
+    top: 0;
+    left: 0;
+    height: auto;
+    transform: none;
+    width: 100%;
+    flex-direction: column-reverse;
+    border-radius: 0;
+  }
+
+  .modal__half {
+    width: 100%;
+    padding: 40px;
+  }
+
+}
+
+/* Small phones */
+@media (max-width: 480px) {
+  .title {
+    font-size: 52px;
+  }
+  
+  .header_para {
+    font-size: 18px;
+  }
+  .nav__link:first-child {
+    display: none;
+  }
+  
+  .project__description--para {
+    display: none;
+  }
+  
+  .project__description {
+    left: 0;
+    padding: 0;
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+  }
+  
+  .project__description--subtitle {
+    margin-bottom: 8px;
+  }
 }
